<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/fragment1"
        android:enabled="true"
        android:icon="@drawable/ic_home_drawer"
        android:title="@string/card"
        android:visible="true" />

    <item
        android:id="@+id/fragment2"
        android:enabled="true"
        android:icon="@drawable/ic_sells_menu"
        android:title="@string/second"
        android:visible="true" />




    <item
        android:id="@+id/fragment3"
        android:enabled="true"
        android:icon="@drawable/ic_alert_home"
        android:title="@string/third"
        android:visible="true" />
    <item
        android:id="@+id/signIn2"
        android:enabled="true"
        android:icon="@drawable/ic_alert_home"
        android:title="@string/sign_in"
        android:visible="true" />
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/logout"
        android:visible="false" />


</menu>