<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginSignup.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/bg_img_desc"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_shape" />

        <TextView
            android:id="@+id/login_welcome_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/login_welcome_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/login_image_view"
            tools:layout_editor_absoluteY="112dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_mobile_hint"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_image_view"
            app:placeholderText="@string/login_mobile_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="Enter your email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login_password_hint"
            app:endIconMode="password_toggle"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileOutlinedTextField"
            app:placeholderText="@string/login_password_ph"
            app:placeholderTextAppearance="@style/TextAppearance.MyTheme.Body2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="Enter your password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_error_text_view"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textColor="?attr/colorError"
            app:drawableStartCompat="@android:drawable/stat_notify_error"
            app:drawableTint="?attr/colorError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_error_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordOutlinedTextField" />


        <TextView
            android:id="@+id/login_forgot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_text"
            android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/login_signup_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_error_text_view" />

        <TextView
            android:id="@+id/login_signup_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_signup_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="497dp" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/red_dark"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/login_btn_text"
            android:textSize="20sp"

            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_signup_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>